--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "test:withoutWatch": "vitest run"
   },
   "dependencies": {
+    "@emotion/react": "latest",
+    "@emotion/styled": "latest",
+    "@mui/material": "^5.15.9",
     "@mui/x-charts": "^6.19.3",
     "classnames": "^2.5.1",
     "lodash": "^4.17.21",
@@ -49,6 +52,8 @@
     "prettier": "^3.2.5",
     "typescript": "^5.2.2",
     "vite": "^5.1.0",
+    "vite-plugin-rewrite-all": "^1.0.2",
+    "vite-tsconfig-paths": "^4.2.0",
     "vitest": "^1.2.2"
   }
 }
