--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@emotion/styled": "latest",
     "@mui/material": "^5.15.9",
     "@mui/x-charts": "^6.19.3",
+    "axios": "^1.6.7",
     "classnames": "^2.5.1",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
